--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,8 @@ h1 {
   text-align: center;
   padding: 3px 3px 3px 3px;
   position:relative;
+  right: -10px;
+  top: -10px;
   margin-bottom: 20px;
   width: 100px;
   height: 25px;
@@ -61,7 +63,7 @@ h1 {
     width: 30%;
     float: left;
     position: relative;
-    padding: 5px 5px 5px 5px;
+    padding: 10px 10px 105px 10px;
     margin: 15px;
   }
 
@@ -76,7 +78,7 @@ h1 {
     width: 44%;
     float: left;
     position: relative;
-    padding: 5px 5px 5px 5px;
+    padding: 10px 10px 10px 10px;
   }
 
   .md {
@@ -89,6 +91,6 @@ h1 {
     width: 100%;
     float: left;
     position: relative;
-    padding: 5px 5px 5px 5px;
+    padding:10px 10px 10px 10px;
   }
 }
